<resources>
    <string name="app_name">MFOOD</string>
    <string name="make_food_by_yourself">Make food by yourself</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="tvPass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_forgot_your_password">You forgot your password?</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="hello">HELLO</string>
    <string name="guys">Guys</string>
    <string name="fast_food">Fast Food</string>
    <string name="welcome_to_mfood">Welcome to MFOOD</string>
    <string name="more_than_1000_people">More than 1000+ people</string>
    <string name="search">Search</string>
    <string name="image_food">Image Food</string>
    <string name="food_s_name">Food\'s name:</string>
    <string name="price">Price:</string>
    <string name="admin">Admin</string>
    <string name="profile">Profile</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="home_town">Home town</string>
    <string name="age">Age</string>
    <string name="description">Description</string>
    <string name="price_addfood">$ Price</string>
    <string-array name="list_gender">
        <item>Female</item>
        <item>Male</item>
        <item>Others</item>
    </string-array>
</resources>
