<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="@color/background_color"
    >
    <TextView
        android:id="@+id/tvHello"
        android:layout_marginTop="29dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/hel_thin"
        android:textColor="@color/text_color"
        android:text="@string/hello"
        android:textSize="75sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_below="@+id/tvHello"
        android:id="@+id/tvGuys"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/hel_bold"
        android:textColor="@color/text_color"
        android:text="@string/guys"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imgCenterInParent"
        android:layout_width="312dp"
        android:layout_height="166dp"
        android:layout_below="@+id/tvGuys"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/fast_food"
        android:src="@drawable/fast_food" />
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgCenterInParent"
        android:id="@+id/tvWelcome"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/hel_thin"
        android:textColor="@color/text_color"
        android:text="@string/welcome_to_mfood"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvMoreThan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/hel_bold"
        android:text="@string/more_than_1000_people"
        android:textColor="@color/text_color"
        android:textSize="30sp" />



</RelativeLayout>