<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/tvLogin"
        android:textColor="@color/text_color"
        android:layout_marginTop="67dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/hel_bold"
        android:textSize="80sp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:autofillHints="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:fontFamily="@font/light_hel"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/username"
        android:background="@drawable/edittext"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/edtUsername"
        android:layout_below="@id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUsername"
        android:layout_marginTop="28dp"
        android:autofillHints="true"
        android:background="@drawable/edittext"
        android:fontFamily="@font/light_hel"
        android:hint="@string/tvPass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btSignIn"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:fontFamily="@font/light_hel"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        android:background="@drawable/custome_button_2"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:textAllCaps="false"
        android:textSize="22sp"
        android:id="@+id/btSignUp"
        android:fontFamily="@font/light_hel"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:background="@drawable/custome_button_2"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <ImageView
        android:contentDescription="@string/make_food_by_yourself"
        android:id="@+id/imgLineBottom"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/line_bottom"
        android:layout_below="@id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLineBottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/hel_thin"
        android:text="@string/you_forgot_your_password"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>