<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".addfood">

    <TextView
        android:fontFamily="@font/hel_bold"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textColor="@color/text_color"
        android:textSize="50sp"
        android:text="@string/add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        app:cardElevation="0dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="90sp"
        android:background="@drawable/circle_food"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="180dp">
        <ImageView
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:scaleType="centerCrop"
            android:id="@+id/imgAddFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_food" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edtFoodNameAddFood"
        android:textColor="#000000"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:fontFamily="@font/hel_bold"
        android:textAlignment="center"
        android:hint="@string/food_s_name"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custome_tvname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtDescriptionAddFood"
        android:layout_width="371dp"
        android:layout_height="165dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="true"
        android:background="@drawable/custome_tvname"
        android:fontFamily="@font/hel_thin"
        android:hint="@string/description"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/edtFoodPriceAddFood"
        android:textColor="#000000"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:fontFamily="@font/hel_bold"
        android:textAlignment="center"
        android:hint="@string/price_addfood"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custome_tvname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_gravity="center"
        android:id="@+id/btSubmitAddFood"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:fontFamily="@font/light_hel"
        android:text="@string/submit"
        android:textColor="@color/text_color"
        android:background="@drawable/custome_button_3"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>