<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/tvRegister"
        android:textColor="@color/text_color"
        android:layout_marginTop="67dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/hel_bold"
        android:textSize="80sp"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:autofillHints="true"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:fontFamily="@font/light_hel"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/username"
        android:background="@drawable/editext_2"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/edtUsername_Reg"
        android:layout_below="@id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/edtPassword_Reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUsername_Reg"
        android:layout_marginTop="28dp"
        android:autofillHints="true"
        android:background="@drawable/editext_2"
        android:fontFamily="@font/light_hel"
        android:hint="@string/tvPass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="24sp" />
    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/edtConFirmPassword_Reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword_Reg"
        android:layout_marginTop="28dp"
        android:autofillHints="true"
        android:background="@drawable/editext_2"
        android:fontFamily="@font/light_hel"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="24sp" />
    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtConFirmPassword_Reg"
        android:layout_marginTop="28dp"
        android:autofillHints="true"
        android:background="@drawable/editext_2"
        android:fontFamily="@font/light_hel"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btSubmit"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:fontFamily="@font/light_hel"
        android:text="@string/submit"
        android:textColor="@color/text_color"
        android:background="@drawable/custome_button_3"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>