<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/background_color"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <TextView
        android:textColor="@color/text_color"
        android:layout_marginTop="55dp"
        android:textAlignment="center"
        android:fontFamily="@font/hel_bold"
        android:textSize="70sp"
        android:text="@string/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/tv_proFileName"
        android:fontFamily="@font/light_hel"
        android:textColorHint="@color/text_color"
        android:padding="20dp"
        android:textSize="26sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custome_boxprofile"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:hint="@string/name"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/tv_proFileHomeTown"
        android:fontFamily="@font/light_hel"
        android:textColorHint="@color/text_color"
        android:padding="20dp"
        android:textSize="26sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custome_boxprofile"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:hint="@string/home_town"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="textPersonName" />

    <Spinner
        android:padding="10dp"
        android:background="@android:color/background_dark"
        android:textAlignment="center"
        android:entries="@array/list_gender"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/tv_proFileAge"
        android:fontFamily="@font/light_hel"
        android:textColorHint="@color/text_color"
        android:padding="20dp"
        android:textSize="26sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/custome_boxprofile"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:hint="@string/age"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="number" />
    <Button
        android:layout_gravity="center"
        android:id="@+id/btSubmitProfile"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:fontFamily="@font/light_hel"
        android:text="@string/submit"
        android:textColor="@color/text_color"
        android:background="@drawable/custome_button_3"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>