<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_marginBottom="10dp"
    android:layout_alignParentEnd="true"
    android:orientation="horizontal"
    android:layout_marginStart="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:background="@drawable/card_food">
    <androidx.cardview.widget.CardView
        android:layout_marginStart="10dp"
        app:cardCornerRadius="65dp"
        android:background="@drawable/circle_food"
        android:layout_gravity="center"
        android:layout_width="130dp"
        android:layout_height="130dp">
        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/imgFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_food" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/content_food"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvFoodName"
            android:fontFamily="@font/mono_regular"
            android:text="@string/food_s_name"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/mono_regular"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_decrips" />

        <Button
            android:layout_marginTop="3dp"
            android:id="@+id/btPrice"
            android:layout_marginStart="120dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:background="@drawable/button_price"
            android:fontFamily="@font/mono_regular"
            android:text="@string/price"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>

</RelativeLayout>